--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
+            <a class="navbar-brand page-scroll">
                 <i class="fa fa-play-circle"></i>  <span class="light">World's</span>  Meal
             </a>
         </div>
@@ -33,10 +33,10 @@
             <ul class="nav navbar-nav">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                 <li class="hidden">
-                    <a href="#page-top"></a>
+                    <a ></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                   <a class="page-scroll">South Korea</a>
                 </li>
             </ul>
         </div>
@@ -45,8 +45,8 @@
     <!-- /.container -->
 </nav>
 
-<!-- Intro Header -->
-<header class="intro">
+<!-- Intro Div -->
+<div class="intro">
     <div class="intro-body">
         <div class="container">
             <div class="row">
@@ -64,24 +64,14 @@
                                 </span>
                             </div>
                         </div>
+
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
-</header>
-
-<!-- About Section -->
-<section id="about" class="container content-section text-center">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-            <h2>About World's Meal</h2>
-            <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-        </div>
-    </div>
-</section>
-
-
+</div>
 
 <!-- Footer -->
 <footer>
@@ -89,8 +79,5 @@
         <p>Copyright &copy; Ludmila & Emilia 2015</p>
     </div>
 </footer>
-
-
-
 </body>
 </html>
