--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
                     <div class="row">
                         <div id="custom-search-input">
                             <div class="input-group col-md-12">
-                                <input type="text" class="  search-query form-control" placeholder="Type a location" />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
+                                <input type="search"  class="  search-query form-control" id="myInput" placeholder="Type a location" onsearch="myFunction()" />
+
+                                <script>
+                                    function myFunction() {
+                                        var x = document.getElementById("myInput");
+                                        //window.alert(x.value);
+                                        window.location.href = "templates/foodResults.html";
+                                    }
+                                </script>
                             </div>
                         </div>
 
