--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
 
     <!-- Bootstrap Core CSS -->
-    <link href="public/styles/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="public/styles/grayscale.css" rel="stylesheet">
     <link href="public/styles/main.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="public/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="public/styles/bootstrap.min.css" rel="stylesheet">
+
 
     <title>Feed you trip</title>
 </head>
@@ -52,7 +53,8 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1 class="brand-heading">Feed your Trip</h1>
-                    <p class="intro-text">A free, responsive, one page Bootstrap theme.</p>
+                    <br><br>
+                    <p class="intro-text">Find out what you can eat in your location</p>
                     <div class="row">
                         <div id="custom-search-input">
                             <div class="input-group col-md-12">
