--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll">
-                <i class="fa fa-play-circle"></i>  <span class="light">World's</span>  Meal
-            </a>
+            <ul class="nav navbar-nav">
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li>
+                    <a class="page-scroll"><img src="public/img/logo.png" id="logo">World's Meal</img></a>
+                </li>
+            </ul>
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                <li class="hidden">
-                    <a ></a>
-                </li>
+
                 <li>
                    <a class="page-scroll">South Korea</a>
                 </li>
