--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="public/styles/grayscale.css" rel="stylesheet">
     <link href="public/styles/main.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="public/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="public/styles/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="public/styles/bootstrap.min.css" rel="stylesheet">
 
 
@@ -27,23 +27,20 @@
             <ul class="nav navbar-nav">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                 <li>
-                    <a class="page-scroll"><img src="public/img/logo.png" id="logo">World's Meal</img></a>
+                    <a class="page-scroll logo"><img src="public/img/logo.png" id="logo">World's Meal</img></a>
                 </li>
             </ul>
 
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
-                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-
                 <li>
-                   <a class="page-scroll">South Korea</a>
+                   <a class="page-scroll location">South Korea</a>
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
+
     </div>
     <!-- /.container -->
 </nav>
@@ -83,7 +80,7 @@
 <!-- Footer -->
 <footer>
     <div class="container text-center">
-        <p>Copyright &copy; Ludmila & Emilia 2015</p>
+        <p class="footertext">Copyright &copy; Ludmila & Emilia 2015</p>
     </div>
 </footer>
 </body>
